# vala-application-template

./: README.md  meson.build  meson_options.txt  setup-space.sh  test-template.sh
.github/workflows/: CI.yml
build-aux/flatpak/: <<APP-ID>>-Devel.json
data/: <<APP-ID>>.appdata.xml.in  <<APP-ID>>.gresource.xml  meson.build
data/ui/: main-window.blp
po/: update_pot.sh  update_potfiles.sh
src/: about.vala  application.vala  config.vapi  main-window.vala  main.vala  main_window.vala  meson.build  window.vala
tests/: example_test.vala
